--- a/ui/registration.ui
+++ b/ui/registration.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Students_health_records</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../Students_health_records/ui/icon.jpg</normaloff>../Students_health_records/ui/icon.jpg</iconset>
+  </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
     <widget class="QLabel" name="label">
@@ -22,7 +26,7 @@
     </widget>
    </item>
    <item row="0" column="1" colspan="2">
-    <widget class="QLineEdit" name="lineEdit"/>
+    <widget class="QLineEdit" name="lineEdit_first_name"/>
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_2">
@@ -32,7 +36,7 @@
     </widget>
    </item>
    <item row="1" column="1" colspan="2">
-    <widget class="QLineEdit" name="lineEdit_2"/>
+    <widget class="QLineEdit" name="lineEdit_last_name"/>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label_3">
@@ -42,7 +46,7 @@
     </widget>
    </item>
    <item row="2" column="1" colspan="2">
-    <widget class="QLineEdit" name="lineEdit_3"/>
+    <widget class="QLineEdit" name="lineEdit_username"/>
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label_4">
@@ -52,7 +56,7 @@
     </widget>
    </item>
    <item row="3" column="1" colspan="2">
-    <widget class="QLineEdit" name="lineEdit_4"/>
+    <widget class="QLineEdit" name="lineEdit_password"/>
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="label_5">
@@ -62,24 +66,26 @@
     </widget>
    </item>
    <item row="4" column="1" colspan="2">
-    <widget class="QLineEdit" name="lineEdit_5"/>
+    <widget class="QLineEdit" name="lineEdit_Email"/>
    </item>
    <item row="5" column="1">
     <widget class="QPushButton" name="sign_up_button">
      <property name="text">
-      <string>Sign up</string>
+      <string>Confirm</string>
      </property>
     </widget>
    </item>
    <item row="5" column="2">
     <widget class="QPushButton" name="sign_in_button">
      <property name="text">
-      <string>Sign in</string>
+      <string>Back</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../Students_health_records/ui/eye.qrc"/>
+ </resources>
  <connections/>
 </ui>
