--- a/ui/eye.qrc
+++ b/ui/eye.qrc
@@ -1,5 +1,5 @@
 <RCC>
-  <qresource prefix="icon">
-    <file>eye.png</file>
+  <qresource prefix="newPrefix">
+    <file>icon.jpg</file>
   </qresource>
 </RCC>
