--- a/ui/registration.ui
+++ b/ui/registration.ui
@@ -10,6 +10,9 @@
     <height>333</height>
    </rect>
   </property>
+  <property name="acceptDrops">
+   <bool>false</bool>
+  </property>
   <property name="windowTitle">
    <string>Students_health_records</string>
   </property>
