--- a/ui/user2.ui
+++ b/ui/user2.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>Ui_Student_health_records</class>
+ <widget class="QMainWindow" name="Ui_Student_health_records">
   <property name="geometry">
    <rect>
     <x>0</x>
