--- a/ui/add_user.ui
+++ b/ui/add_user.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Form</class>
- <widget class="QWidget" name="Form">
+ <class>Student_health_records</class>
+ <widget class="QWidget" name="Student_health_records">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>336</width>
+    <width>345</width>
     <height>387</height>
    </rect>
   </property>
