--- a/ui/add_user.ui
+++ b/ui/add_user.ui
@@ -1,45 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Student_health_records</class>
- <widget class="QWidget" name="Student_health_records">
+ <class>addUserWindow</class>
+ <widget class="QWidget" name="addUserWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>345</width>
-    <height>387</height>
+    <width>366</width>
+    <height>385</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>Form</string>
+  <property name="minimumSize">
+   <size>
+    <width>366</width>
+    <height>385</height>
+   </size>
   </property>
-  <widget class="QLabel" name="label_6">
+  <property name="maximumSize">
+   <size>
+    <width>366</width>
+    <height>385</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>Student health records </string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>icon.jpg</normaloff>icon.jpg</iconset>
+  </property>
+  <widget class="QLabel" name="card_number_label">
    <property name="geometry">
     <rect>
-     <x>9</x>
+     <x>19</x>
      <y>28</y>
-     <width>65</width>
+     <width>71</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Medical card*</string>
+    <string>Card number*</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_medical_card">
+  <widget class="QLineEdit" name="card_number_lineEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>28</y>
      <width>210</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="maxLength">
+    <number>28</number>
+   </property>
+   <property name="placeholderText">
+    <string>card number</string>
+   </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="first_name_label">
    <property name="geometry">
     <rect>
-     <x>9</x>
+     <x>19</x>
      <y>73</y>
      <width>56</width>
      <height>16</height>
@@ -49,21 +74,27 @@
     <string>First name*</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_first_name">
+  <widget class="QLineEdit" name="first_name_lineEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>73</y>
      <width>210</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="maxLength">
+    <number>28</number>
+   </property>
+   <property name="placeholderText">
+    <string>first name</string>
+   </property>
   </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="last_name_label">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>120</y>
+     <x>19</x>
+     <y>165</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -72,20 +103,26 @@
     <string>Last name*</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_last_name">
+  <widget class="QLineEdit" name="last_name_lineEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>165</y>
      <width>210</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="maxLength">
+    <number>28</number>
+   </property>
+   <property name="placeholderText">
+    <string>last name</string>
+   </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="username_label">
    <property name="geometry">
     <rect>
-     <x>9</x>
+     <x>19</x>
      <y>210</y>
      <width>54</width>
      <height>16</height>
@@ -95,20 +132,26 @@
     <string>Username*</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_username">
+  <widget class="QLineEdit" name="username_lineEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>210</y>
      <width>210</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="maxLength">
+    <number>28</number>
+   </property>
+   <property name="placeholderText">
+    <string>username</string>
+   </property>
   </widget>
-  <widget class="QLabel" name="label_4">
+  <widget class="QLabel" name="password_label">
    <property name="geometry">
     <rect>
-     <x>9</x>
+     <x>19</x>
      <y>255</y>
      <width>52</width>
      <height>16</height>
@@ -118,20 +161,26 @@
     <string>Password*</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_password">
+  <widget class="QLineEdit" name="password_lineEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>255</y>
      <width>210</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="maxLength">
+    <number>28</number>
+   </property>
+   <property name="placeholderText">
+    <string>password</string>
+   </property>
   </widget>
-  <widget class="QLabel" name="label_5">
+  <widget class="QLabel" name="email_label">
    <property name="geometry">
     <rect>
-     <x>9</x>
+     <x>19</x>
      <y>300</y>
      <width>30</width>
      <height>16</height>
@@ -141,22 +190,28 @@
     <string>Email*</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_email">
+  <widget class="QLineEdit" name="email_lineEdit">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>300</y>
      <width>210</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="maxLength">
+    <number>28</number>
+   </property>
+   <property name="placeholderText">
+    <string>email</string>
+   </property>
   </widget>
-  <widget class="QDialogButtonBox" name="buttonBox">
+  <widget class="QDialogButtonBox" name="ok_cancel_buttonBox">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>130</x>
      <y>350</y>
-     <width>156</width>
+     <width>211</width>
      <height>23</height>
     </rect>
    </property>
@@ -164,21 +219,27 @@
     <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_phone_number">
+  <widget class="QLineEdit" name="phone_number_error">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>120</y>
      <width>210</width>
      <height>20</height>
     </rect>
    </property>
+   <property name="maxLength">
+    <number>28</number>
+   </property>
+   <property name="placeholderText">
+    <string>phone number</string>
+   </property>
   </widget>
-  <widget class="QLabel" name="label_7">
+  <widget class="QLabel" name="phone_number_label">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>165</y>
+     <x>20</x>
+     <y>120</y>
      <width>81</width>
      <height>16</height>
     </rect>
@@ -187,23 +248,23 @@
     <string>Phone number*</string>
    </property>
   </widget>
-  <widget class="QLabel" name="medical_card_error">
+  <widget class="QLabel" name="card_number_error">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>47</y>
      <width>210</width>
      <height>13</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QLabel" name="fist_name_error">
+  <widget class="QLabel" name="first_name_error">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>91</y>
      <width>210</width>
      <height>13</height>
@@ -213,10 +274,10 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="last_name_error_2">
+  <widget class="QLabel" name="phone_number_error_2">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>139</y>
      <width>210</width>
      <height>13</height>
@@ -226,10 +287,10 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="phone_number_error">
+  <widget class="QLabel" name="last_name_error">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>185</y>
      <width>210</width>
      <height>13</height>
@@ -239,10 +300,10 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLabel" name="user_name_error">
+  <widget class="QLabel" name="username_error">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>230</y>
      <width>210</width>
      <height>13</height>
@@ -255,7 +316,7 @@
   <widget class="QLabel" name="password_error">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>273</y>
      <width>210</width>
      <height>13</height>
@@ -268,7 +329,7 @@
   <widget class="QLabel" name="email_error">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>130</x>
      <y>320</y>
      <width>210</width>
      <height>13</height>
