--- a/ui/admin3.ui
+++ b/ui/admin3.ui
@@ -11,9 +11,13 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Student health records</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>icon.jpg</normaloff>icon.jpg</iconset>
+  </property>
+  <widget class="QPushButton" name="save_button">
    <property name="geometry">
     <rect>
      <x>580</x>
@@ -26,7 +30,7 @@
     <string>Save</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="diagnose_label">
    <property name="geometry">
     <rect>
      <x>360</x>
@@ -39,7 +43,7 @@
     <string>Diagnoses:</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="add_new_button">
    <property name="geometry">
     <rect>
      <x>440</x>
@@ -52,7 +56,7 @@
     <string>Add new</string>
    </property>
   </widget>
-  <widget class="QTextEdit" name="textEdit">
+  <widget class="QTextEdit" name="diagnose_textEdit">
    <property name="geometry">
     <rect>
      <x>360</x>
@@ -61,25 +65,28 @@
      <height>61</height>
     </rect>
    </property>
+   <property name="placeholderText">
+    <string>please write diagnose here.</string>
+   </property>
   </widget>
   <widget class="QLabel" name="name_error">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>46</y>
+     <x>49</x>
+     <y>86</y>
      <width>211</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QLabel" name="card_number_error">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>96</y>
+     <x>49</x>
+     <y>136</y>
      <width>211</width>
      <height>16</height>
     </rect>
@@ -91,8 +98,8 @@
   <widget class="QLabel" name="group_error">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>145</y>
+     <x>49</x>
+     <y>185</y>
      <width>211</width>
      <height>16</height>
     </rect>
@@ -104,8 +111,8 @@
   <widget class="QLabel" name="email_error">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>195</y>
+     <x>49</x>
+     <y>235</y>
      <width>211</width>
      <height>16</height>
     </rect>
@@ -117,8 +124,8 @@
   <widget class="QLabel" name="phone_number_error">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>246</y>
+     <x>49</x>
+     <y>286</y>
      <width>211</width>
      <height>16</height>
     </rect>
@@ -127,14 +134,14 @@
     <string/>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_name">
+  <widget class="QLineEdit" name="full_name_lineEdit">
    <property name="enabled">
     <bool>true</bool>
    </property>
    <property name="geometry">
     <rect>
-     <x>51</x>
-     <y>26</y>
+     <x>50</x>
+     <y>66</y>
      <width>210</width>
      <height>20</height>
     </rect>
@@ -143,7 +150,7 @@
     <string/>
    </property>
    <property name="text">
-    <string>Name</string>
+    <string/>
    </property>
    <property name="frame">
     <bool>true</bool>
@@ -152,74 +159,164 @@
     <bool>false</bool>
    </property>
    <property name="placeholderText">
-    <string/>
+    <string>Rudnyk Taras Petrovich</string>
    </property>
    <property name="clearButtonEnabled">
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_card_number">
+  <widget class="QLineEdit" name="card_number_lineEdit">
    <property name="geometry">
     <rect>
-     <x>51</x>
-     <y>77</y>
+     <x>50</x>
+     <y>117</y>
      <width>210</width>
      <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>12345678</string>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="group_lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>168</y>
+     <width>210</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>km23</string>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="email_lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>219</y>
+     <width>210</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>tarasrudnyk@gmail.com</string>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="phone_number_lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>270</y>
+     <width>210</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="placeholderText">
+    <string>+380954659168</string>
+   </property>
+   <property name="clearButtonEnabled">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="full_name_label">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>50</y>
+     <width>141</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Full name</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="card_number_label">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>100</y>
+     <width>121</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Card number</string>
    </property>
-   <property name="clearButtonEnabled">
-    <bool>true</bool>
-   </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_group">
+  <widget class="QLabel" name="group_label">
    <property name="geometry">
     <rect>
-     <x>51</x>
-     <y>128</y>
-     <width>210</width>
-     <height>20</height>
+     <x>50</x>
+     <y>150</y>
+     <width>131</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Group</string>
    </property>
-   <property name="clearButtonEnabled">
-    <bool>true</bool>
-   </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_email">
+  <widget class="QLabel" name="email_label">
    <property name="geometry">
     <rect>
-     <x>51</x>
-     <y>179</y>
-     <width>210</width>
-     <height>20</height>
+     <x>50</x>
+     <y>200</y>
+     <width>141</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Email</string>
    </property>
-   <property name="clearButtonEnabled">
-    <bool>true</bool>
-   </property>
   </widget>
-  <widget class="QLineEdit" name="lineEdit_phone_number">
+  <widget class="QLabel" name="phone_number_label">
    <property name="geometry">
     <rect>
-     <x>51</x>
-     <y>230</y>
-     <width>210</width>
-     <height>20</height>
+     <x>50</x>
+     <y>250</y>
+     <width>141</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
     <string>Phone number</string>
    </property>
-   <property name="clearButtonEnabled">
-    <bool>true</bool>
+  </widget>
+  <widget class="QPushButton" name="back_to_info_view_pushButton">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>430</y>
+     <width>131</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Back to information view</string>
    </property>
   </widget>
  </widget>
